--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -8,7 +8,7 @@
                       Title="MainWindow"
                       Width="800"
                       Height="450"
-                      Style="{StaticResource CustomWindowStyle}"
+                      Style="{StaticResource MaterialWindowStyle}"
                       mc:Ignorable="d">
 
     <Grid>
