--- a/WpfApp3/App.xaml
+++ b/WpfApp3/App.xaml
@@ -11,6 +11,7 @@
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/WpfApp3;component/WindowStyle.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/WpfApp3;component/MaterialWindowStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <Style BasedOn="{StaticResource MaterialDesignScrollBarMinimal}" TargetType="{x:Type ScrollBar}" />
